style.css
:root {
    /* MUTUAL */
    --c-blue: #0079FF;

    /* LIGHT */
    --c-blue-gray-l: #697C9A;
    --c-blue-dark-l: #4B6A9B;
    --c-blue-darkest-l: #2B3442;
    --c-blue-lightest-l: #F6F8FF;
    --c-gray-lightest-l: #FEFEFE;

    /* DARK */
    --c-white: #FFFFFF;
    --c-blue-darkest-d: #141D2F;
    --c-blue-dark-d: #1E2A47;
}

/*DEFAULT*/
html {
    overflow: auto;
    font-size: 62.5%;
    box-sizing: border-box;
}

*,
*::after,
*::before {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
    font-family: 'Space Mono', monospace;
    font-size: inherit;
}

body {
    overflow: inherit;
    font-size: 1.3rem;
    font-weight: 400;
    line-height: 2.5rem;
    min-height: 100vh;
    background-color: var(--c-blue-lightest-l);
}

ul {
    list-style: none;
}

/*LAYOUT*/
.container {
    display: block;
    margin: 3.1rem auto;
    padding: 0 2.4rem;
    max-width: 73rem;
}

.main {
    display: block;
    width: 100%;
}

/*TYPOGRAPHY*/
.heading-1 {
    font-size: 2.6rem;
    line-height: 3.8rem;
}

.heading-2 {
    font-size: 2.2rem;
    line-height: 3.3rem;
}

.heading-3 {
    font-size: 1.6rem;
    line-height: 2.4rem;
}

.heading-4 {
    font-size: 1.3rem;
    line-height: 2rem;
}

h1, h2 {
    font-weight: 700;
}

h3, h4 {
    font-weight: 400;
}

/*HEADER*/
.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 3.6rem;
}

.logo {
    font-size: 2.6rem;
    color: #222731;
}

.mode-toggle {
    display: flex;
    justify-content: space-between;
    /* align-items: center; */
    background: none;
    border: none;
    cursor: pointer;
    width: 7.8rem;
}

.mode-toggle__title {
    color: var(--c-blue-gray-l);
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: .25rem;
}

/* .mode-toggle::after {
    content: url('./assets/icon-moon.svg');
} */

.mode-toggle:hover .mode-toggle__title {
    color: black;
}

.mode-toggle:hover>img {
    fill: black;
}

/* .mode-toggle:hover:after {
    content: url('./assets/icon-moon-hover.svg');
} */

/*SEARCH-BAR*/
.form-group {
    display: flex;
    align-items: center;
    width: 100%;
    background-color: var(--c-gray-lightest-l);
    padding: .7rem;
    box-shadow: 0 1.6rem 3rem -1rem rgba(70, 96, 187, 0.2);
    margin-bottom: 1.6rem;
    border-radius: 1.5rem;
}

.search-icon {
    width: 2rem;
    height: 2rem;
    margin: 0 .9rem;
}

.form-control {
    flex: 1;
    border: none;
    font-weight: 400;
}

.form-control:focus {
    outline: none;
}

.form-control::placeholder {
    color: var(--c-blue-dark-l);
}

.btn {
    border: none;
    border-radius: 1rem;
    font-size: 1.4rem;
    padding: 1.25rem 0;
}

.btn--search {
    background-color: var(--c-blue);
    color: var(--c-white);
    width: 8.4rem;
}

.btn--search:hover {
    cursor: pointer;
    background-color: #60ABFF;
}

/*USER PROFILE*/
.profile-container {
    background-color: var(--c-gray-lightest-l);
    padding: 3.2rem 2.4rem 4.8rem;
    border-radius: 1.5rem;
    box-shadow: 0 1.6rem 3rem -1rem rgba(70, 96, 187, 0.2);
}

.user-profile {
    display: flex;
    flex-direction: column;
}

.user-profile__summary {
    display: flex;
    align-items: center;
    column-gap: 1.9rem;
}

.user-profile__text {
    display: flex;
    flex: 1;
    flex-wrap: wrap;
    justify-content: space-between;
    row-gap: .9rem;
    column-gap: 14rem;
}

.user-profile__photo {
    width: 7rem;
    height: 7rem;
    border-radius: 50%;
    /*test*/
    background-color: var(--c-blue-lightest-l);
    /******/
}

.user-wrapper {
    line-height: 2.1rem;
}

.user-name {
    font-size: 1.6rem;
    font-weight: 700;
    color: var(--c-blue-darkest-l);
}

.user-id {
    color: var(--c-blue);
}

.user-date-joined {
    color: var(--c-blue-gray-l);
}

.user-description {
    color: var(--c-blue-dark-l);
    margin-top: 3.3rem;
}

/*USER STATS*/
.user-stats-wrapper {
    background-color: var(--c-blue-lightest-l);
    border-radius: 1rem;
    padding: 1.8rem 3.8rem;
    margin-top: 2.3rem;
}

.user-stats {
    display: flex;
    justify-content: space-between;
    max-width: 36.5rem;
}

.user-stat {
    text-align: center;
}

.stat-label {
    font-size: 1.1rem;
    font-weight: 400;
    color: var(--c-blue-dark-l);
}

.stat-data {
    font-size: 1.6rem;
    font-weight: 700;
    color: var(--c-blue-darkest-l);
}

/*USER DETAILS*/
.grid-items {
    display: grid;
    grid-template-rows: 1fr 1fr 1fr 1fr;
    grid-row-gap: 1.6rem;
    color: var(--c-blue-dark-l);
    max-width: 43rem;
    margin-top: 2.4rem;
}

.grid-item {
    display: grid;
    grid-template-columns: 2rem 1fr;
    grid-column-gap: 1.3rem;
}

.icon {
    align-self: center;
}

.not-available {
    opacity: 50%;
}

@media only screen and (min-width: 36em) {
    .btn {
        font-size: 1.6rem;
        width: 10.6rem;
    }

    .container {
        max-width: 57.3rem;
        margin-top: 14rem;
        margin-bottom: 14rem;
    }

    .form-group {
        margin-bottom: 2.4rem;
    }

    .form-control {
        font-size: 1.8rem;
    }

    .profile-container {
        padding: 3.2rem 4rem 4.8rem;
    }

    .user-profile__photo {
        width: 11.7rem;
        height: 11.7rem;
    }

    .user-profile__summary {
        line-height: 2.1rem;
        column-gap: 4.1rem;
    }

    .user-profile__text {
        row-gap: 0rem;
    }

    .user-wrapper {
        line-height: 3.5rem;
    }

    .user-name {
        font-size: 2.6rem;
    }

    .user-id {
        font-size: 1.6rem;
    }

    .user-date-joined {
        font-size: 1.5rem;
    }

    .user-description {
        font-size: 1.5rem;
    }

    .user-stat {
        text-align: left;
    }

    .stat-label {
        font-size: 1.3rem;
    }

    .stat-data {
        font-size: 2.2rem;
    }

    .grid-items {
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        font-size: 1.5rem;
    }
}

@media only screen and (min-width: 60em) {
    .container {
        max-width: 73rem;
    }

    .user-profile__summary {
        align-items: flex-start;
    }

    .user-profile__text {
        column-gap: 10rem;
    }

    .user-profile>*:not(:first-child) {
        margin-left: 15.8rem;
    }

    .user-description {
        margin-top: -3rem;
    }
}

/*DARK-MODE STYLING*/
.dark-mode,
.dark-mode .user-stats-wrapper {
    background-color: var(--c-blue-darkest-d);
}

.dark-mode .form-group,
.dark-mode .form-control,
.dark-mode .profile-container {
    background-color: var(--c-blue-dark-d);
}

.dark-mode *:not(.user-id),
.dark-mode ::placeholder {
    color: var(--c-white);
}

.dark-mode .mode-toggle:hover .mode-toggle__title {
    color: #90A4D4;
}

